--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "@types/highcharts": "^5.0.7",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.0",
+    "@types/react-burger-menu": "^2.6.1",
     "bootstrap": "^3.3.7",
     "file-saver": "^1.3.3",
+    "global": "^4.4.0",
     "griddle-react": "1.13.0",
     "highstock-release": "^6.0.3",
     "jquery": "^3.5.0",
+    "keycloak-js": "9.0.2",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.13",
     "object-assign": "^4.1.1",
+    "portable-fetch": "^3.0.0",
     "prop-types": "^15.5.0",
     "rc-tree": "^1.4.1",
     "react": "15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-bootstrap-toggle": "^2.0.4",
-    "react-burger-menu": "^2.1.6",
+    "react-burger-menu": "2.6.14",
     "react-calendar-component": "latest",
     "react-datetime": "^2.14.0",
     "react-dom": "15.6.1",
@@ -39,19 +43,18 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "2.2.0",
     "uuidjs": "^3.5.3"
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/node": "^8.0.1",
     "@types/prop-types": "^15.5.2",
-    "@types/react-bootstrap": "^0.31.4",
-    "@types/react-burger-menu": "^2.1.4",
+    "@types/react-bootstrap": "^0.31.3",
     "@types/react-dom": "16.0.1",
     "@types/react-overlays": "^0.6.9",
     "@types/react-redux": "^5.0.9",
-    "@types/react-router-dom": "^4.0.8",
+    "@types/react-router-dom": "4.2.2",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.4",
     "@types/uuidjs": "^3.3.2",
@@ -84,6 +87,8 @@
     "typescript": "^2.5.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
+    "webpack-cli": "2.1.4",
+    "webpack-dev-server": "2.11.5",
     "webpack-fail-plugin": "^2.0.0"
   },
   "scripts": {
