--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "module": "commonjs",
         "target": "es6",
         "jsx": "react",
-        "allowJs": true
+        "allowJs": true,
+        "keyofStringsOnly": true
     },
     "include": [
         "src/**/*"
