--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.0",
     "@types/react-burger-menu": "^2.6.1",
-    "bootstrap": "^3.3.7",
-    "file-saver": "^1.3.3",
-    "global": "^4.4.0",
+    "bootstrap": "4.5.3",
+    "devextreme-react": "20.2.3",
     "griddle-react": "1.13.0",
-    "highstock-release": "^6.0.3",
+    "highstock-release": "6.0.4",
     "jquery": "^3.5.0",
     "keycloak-js": "9.0.2",
     "moment": "^2.20.1",
@@ -27,17 +26,15 @@
     "portable-fetch": "^3.0.0",
     "prop-types": "^15.5.0",
     "rc-tree": "^1.4.1",
-    "react": "15.6.1",
-    "react-bootstrap": "^0.31.3",
+    "react": "16.14.0",
+    "react-bootstrap": "1.4.0",
     "react-bootstrap-toggle": "^2.0.4",
-    "react-burger-menu": "2.6.14",
-    "react-calendar-component": "latest",
-    "react-datetime": "^2.14.0",
-    "react-dom": "15.6.1",
+    "react-burger-menu": "2.9.0",
+    "react-dom": "16.14.0",
     "react-intl": "^2.2.2",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-spinner": "^0.2.7",
     "recompose": "^0.26.0",
@@ -46,15 +43,16 @@
     "redux-thunk": "2.2.0",
     "uuidjs": "^3.5.3"
   },
+  "resolutions": {
+    "@types/react": "16.9.35"
+  },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/node": "^8.0.1",
-    "@types/prop-types": "^15.5.2",
-    "@types/react-bootstrap": "^0.31.3",
-    "@types/react-dom": "16.0.1",
-    "@types/react-overlays": "^0.6.9",
+    "@types/prop-types": "15.7.3",
+    "@types/react-dom": "16.9.9",
     "@types/react-redux": "^5.0.9",
-    "@types/react-router-dom": "4.2.2",
+    "@types/react-router-dom": "5.1.6",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.4",
     "@types/uuidjs": "^3.3.2",
@@ -84,7 +82,7 @@
     "ts-loader": "^2.0.0",
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.5.3",
+    "typescript": "4.0.5",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-cli": "2.1.4",
