--- a/package.json
+++ b/package.json
@@ -2,12 +2,6 @@
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
-  },
   "dependencies": {
     "@types/file-saver": "^0.0.1",
     "@types/highcharts": "^5.0.7",
@@ -47,6 +41,8 @@
     "@types/react": "16.9.35"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/node": "^8.0.1",
     "@types/prop-types": "15.7.3",
@@ -56,46 +52,34 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.4",
     "@types/uuidjs": "^3.3.2",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
-    "es6-promise": "^4.0.5",
-    "eslint": "^4.7.2",
-    "eslint-config-google": "^0.9.1",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
-    "html-webpack-externals-plugin": "^3.6.0",
-    "html-webpack-plugin": "^2.30.1",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^2.0.0",
-    "tslint": "^5.7.0",
-    "tslint-loader": "^3.5.3",
+    "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "7.0.0",
+    "css-loader": "5.0.2",
+    "eslint": "7.20.0",
+    "eslint-plugin-jsdoc": "^30.7.8",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unicorn": "^23.0.0",
+    "eslint-webpack-plugin": "^2.3.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-react": "7.22.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "5.2.0",
+    "style-loader": "2.0.0",
+    "ts-loader": "8.0.17",
     "typescript": "4.0.5",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
-    "webpack-cli": "2.1.4",
-    "webpack-dev-server": "2.11.5",
-    "webpack-fail-plugin": "^2.0.0"
+    "url-loader": "4.1.1",
+    "webpack": "^5.23.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress",
     "ttt": "webpack --progress",
-    "watch": "webpack --progress --watch",
+    "watch": "webpack --progress --watch --env NO_SECURITY=true",
     "build-production": "webpack -p --progress --config webpack.production.config.js",
     "watch-production": "webpack -p --progress --config webpack.production.config.js --watch",
-    "server": "webpack-dev-server --progress"
+    "server": "webpack serve --progress --env NO_SECURITY=true"
   }
 }
